# 4.7-Project-templates

./: .gitignore  MANIFEST.in  README.md  debugging.py  debugging_test.py  requirements.txt  setup.cfg  setup.py
src/color_matching/: __init__.py  _color_matching.py
src/ml_predictor/: cli.py  model.py
src/mock_light_mixer/: __init__.py  _mock_light_mixer.py
tests/: test_cli.py  test_model.py
