[metadata]
name = ml_predictor
version = attr: ml_predictor.__version__
description = A simple machine learning predictor package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ml_predictor
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    pandas
    numpy
    scikit-learn
    joblib

[options.packages.find]
where = src
